infra/network-policy/scansure-api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scansure-api-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: scansure-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: authz
    ports:
    - protocol: TCP
      port: 3000
